特定単語を含むツイートのユーザー名リストからツイート200件取得

--- a/src/engineer_desineer_tweet.ipynb
+++ b/src/engineer_desineer_tweet.ipynb
@@ -290,7 +290,59 @@
       "125\n",
       "126\n",
       "127\n",
-      "128\n"
+      "128\n",
+      "129\n",
+      "130\n",
+      "131\n",
+      "132\n",
+      "133\n",
+      "134\n",
+      "未経験から転職した駆け出しエンジニア(むしろ成長スピードは徒歩にも及ばないかも)。2018/11までフリーターでした。今はLPIC1とOracleの勉強中。オタクも兼業しているのでゲームのこととかも呟くよ。\n",
+      "135\n",
+      "136\n",
+      "137\n",
+      "138\n",
+      "139\n",
+      "140\n",
+      "141\n",
+      "142\n",
+      "143\n",
+      "144\n",
+      "145\n",
+      "146\n",
+      "147\n",
+      "148\n",
+      "149\n",
+      "性別：男\n",
+      "年齢：35歳\n",
+      "仕事：エンジニアを名乗ってよいのか。。\n",
+      "趣味：ゲームとかマンガとか、広く浅く手を付けた結果\n",
+      "色々イケる人種になりました。\n",
+      "とうとう身長は160cmを超えなかった。。\n",
+      "3年ほど前にひっそりと結婚。\n",
+      "葵・喜美親衛隊No.05\n",
+      "150\n",
+      "151\n",
+      "152\n",
+      "153\n",
+      "154\n",
+      "ブログは更新を滞ってたら、サイト毎消えてました。 新しい活動を画策中（模索でなくてだね）。 ちなみに軽薄論評発行人兼主筆の肩書きは変わらん。すご～く長い休みに入ったままではあるがな。今はさしずめソーシャルエンジニア兼テクニカルライターというところであろうか。面倒くさいので本名もつけといた。\n",
+      "155\n",
+      "156\n",
+      "157\n",
+      "158\n",
+      "159\n",
+      "160\n",
+      "161\n",
+      "162\n",
+      "ゆずと。多趣味人間。重電社内SE→システム開発会社プリセールスエンジニア(クラウドHR)。 兵庫→東京。HoloLens/python/C#は趣味で勉強中。work:Java/postgreSQL/VB.NET-Favorite:Bass/Fitear/水樹奈々/坂本竜太/ワルキューレ/iPhone\n",
+      "趣味のトレーニングが楽しくなってきて仕事と私生活を侵食しだした自称インフラ系エンジニア(笑)。得意技は定時ダッシュとお昼の早抜け。\n",
+      "163\n",
+      "164\n",
+      "165\n",
+      "166\n",
+      "167\n",
+      "168\n"
      ]
     }
    ],
